add service interaction

--- a/EfficiencySystem/Views/WorkShift/Index.cshtml
+++ b/EfficiencySystem/Views/WorkShift/Index.cshtml
@@ -105,7 +105,7 @@
 
     $('.SelectableRow').click(
         function (e) {
-            location.href = "/Worktimes/Worktime/" + $(e.currentTarget).data().id;
+            location.href = "/WorkShift/WorkShift/" + $(e.currentTarget).data().id;
         }
     );
 
